# azure-openai-service-documen-test

./: README.md  pyproject.toml
Quickstarts/: chat_quickstart.py  completions_quickstart.py
Quickstarts/openai-python/: main.py
