[tool.poetry]
name = "azure-openai-service-documentation"
version = "0.1.0"
description = ""
authors = ["Masahiro Ogawa <masahiro.ogaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.31.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
